<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@mipmap/ic_home_foreground"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_activities"
            android:icon="@mipmap/ic_actividades_foreground"
            android:title="@string/actividades" />

        <item
            android:id="@+id/nav_red"
            android:icon="@mipmap/ic_red_foreground"
            android:title="@string/red_actividades"/>

        <item
            android:id="@+id/nav_cerrar_sesion"
            android:icon="@mipmap/ic_logout_foreground"
            android:title="@string/logout" />


    </group>

</menu>