<?xml version="1.0" encoding="utf-8"?>

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/ScrollView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbars="vertical">
        <LinearLayout
            android:layout_width="fill_parent"
            android:orientation="vertical"
            android:layout_height="fill_parent"
            android:theme="@style/Theme.SportsMedia"
            android:background="#3ed632">

            <TextView
                android:id="@+id/titulo_registro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titulo_alta"
                style="@style/titulo"
                android:adjustViewBounds="true"
                android:textSize="20sp"
               >
            </TextView>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Titulo de actividad"
                style="@style/edit_text"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_titulo_actividad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Descripción de la actividad"
                style="@style/edit_text"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_descripcion_actividad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minLines="10"
                    android:maxLines="50"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fecha_actividad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Fecha de la actividad"
                style="@style/edit_text"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_fecha_actividad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:focusable="false"
                    android:clickable="true"
                    android:maxLines="1"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <Spinner
                android:id="@+id/SpinnerFeedbackType"
                android:layout_height="wrap_content"
                android:prompt="@string/lista_zonas"
                android:layout_width="fill_parent"
                android:entries="@array/lista_comunidades">
            </Spinner>


            <CheckBox
                android:id="@+id/chk_equipo"
                android:layout_height="wrap_content"
                android:text="@string/equipo"
                android:layout_width="fill_parent">
            </CheckBox>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="705dp"
                android:layout_height="924dp"
                android:padding="16dp"
                tools:context=".MainActivity">

                <TextView
                    android:id="@+id/time_selection_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Seleccionar fechas"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/to_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Hasta"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toTopOf="@+id/from_label" />

                <TextView
                    android:id="@+id/from_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="Desde"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                    app:layout_constraintEnd_toStartOf="@+id/guideline"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/time_selection_label" />

                <TextView
                    android:id="@+id/from_time"
                    style="@style/edit_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                    app:layout_constraintEnd_toStartOf="@+id/guideline"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/from_label"
                    tools:text="10:00 p. m." />

                <TextView
                    android:id="@+id/to_time"
                    style="@style/edit_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toBottomOf="@+id/to_label"
                    tools:text="12:00 p. m." />

                <TextView
                    android:id="@+id/duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/from_time"
                    tools:text="2 Horas" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.5" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/btn_crearActividad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/bg_button"
                android:hint="@string/btn_nueva_actividad"
                android:textColorHint="#FFFFFF"
                android:textSize="15sp"
                />

        </LinearLayout>
    </ScrollView>
