<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/ScrollView01"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#3ed632"
        android:orientation="vertical"
        android:theme="@style/Theme.SportsMedia">

        <TextView
            android:id="@+id/titulo_registro"
            style="@style/titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:text="@string/titulo_alta"
            android:textSize="20sp"></TextView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="2dp">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Titulo de actividad">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_titulo_actividad"
                    android:layout_width="348dp"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="2dp">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Descripción de la actividad">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_descripcion_actividad"
                    android:layout_width="358dp"
                    android:layout_height="wrap_content"
                    android:maxLines="50"
                    android:minLines="10" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="2dp">

            <com.google.android.material.textfield.TextInputLayout

                style="@style/edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Fecha de la actividad">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_fecha_actividad"
                    android:layout_width="351dp"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="false"
                    android:inputType="date"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="2dp">

            <com.google.android.material.textfield.TextInputLayout

                style="@style/edit_text"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <Spinner
                    android:id="@+id/SpinnerFeedbackType"
                    android:layout_width="275dp"
                    android:layout_height="50dp"
                    android:background="@color/cardview_light_background"
                    android:entries="@array/lista_comunidades"
                    android:prompt="@string/lista_zonas"></Spinner>

            </com.google.android.material.textfield.TextInputLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="2dp">

            <CheckBox
                android:id="@+id/chk_equipo"
                android:layout_width="298dp"
                android:layout_height="wrap_content"
                android:text="@string/equipo"></CheckBox>
        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.ConstraintLayout  xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            tools:context=".MainActivity">


            <TextView
                android:id="@+id/time_selection_label"
                android:layout_width="392dp"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:text="Seleccionar horario de inicio y fin de la actividad"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/to_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"


                android:text="Hasta"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                android:textSize="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="@id/from_label" />
            <TextView
                android:id="@+id/from_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Desde"
                android:textSize="20dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/time_selection_label" />

            <TextView
                android:id="@+id/from_time"
                style="@style/edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/from_label"
                tools:text="10:00 p. m." />


            <TextView
                android:id="@+id/to_time"
                style="@style/edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="108dp"
                android:layout_marginTop="8dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/to_label"
                tools:text="12:00 p. m." />

            <TextView
                android:id="@+id/duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="20dp"
                android:textColor="@color/white"
                style="@style/edit_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/from_time"
                android:text="Duracion :       " />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

        </androidx.constraintlayout.widget.ConstraintLayout>
        <FrameLayout
            android:id="@+id/fragment_mapa"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <Button
            android:id="@+id/btn_crearActividad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bg_button"
            android:hint="@string/btn_nueva_actividad"
            android:textColorHint="#FFFFFF"
            android:textSize="15sp" />

    </LinearLayout>
</ScrollView>
